Fixes extended navigation alignment issue

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -41,6 +41,7 @@ header.bk-header {
 .companyheader {
     display: block;
     float: left;
+    width: 25%;
     padding: 11px 0 0;
 }
 
@@ -89,12 +90,11 @@ footer.bk-footer p {
 .widget.extendednavigation {
     float: right;
     position: relative;
-    max-width: 691px;
+    width: 75%;
     margin: 8px 0 0;
 }
 
 .widget.extendednavigation ul {
-    float: left;
     margin: 0;
     padding: 0;
 }
